# dexvm

./: .gitignore  .gitmodules
bins/: dexvm  exp.dex  libstdc++.so.6
chal/: CMakeLists.txt  encode.h  hashmap.h  linkframe.cc  linkframe.h  main.cc
includes/cutils/: log.h
test/: Debug.java  Makefile  Min.java  patch.py
